fix bug with hidden overflow items in the task-list

--- a/front-end/src/app/components/task-list-bo/task-list-bo.component.scss
+++ b/front-end/src/app/components/task-list-bo/task-list-bo.component.scss
@@ -12,11 +12,11 @@ table {
   width: 100%;
 }
 
-.mat-list[dense],
-.mat-nav-list[dense],
-.mat-selection-list[dense] {
-  display: flex;
-}
+// .mat-list[dense],
+// .mat-nav-list[dense],
+// .mat-selection-list[dense] {
+//   display: flex;
+// }
 tr.example-detail-row {
   background-color: rgba($divider-color, .4);
 }
